Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13333

Deadlock failure that does not occur elsewhere

    XMLWordPrintable

Details

    Description

      MariaDB gets the following deadlock error:

      localhost-dir: sql_create.c:837-5 Fill File table Query failed: INSERT INTO File
      (FileIndex, JobId, PathId, FilenameId, LStat, MD5, DeltaSeq) SELECT
      batch.FileIndex, batch.JobId, Path.PathId, Filename.FilenameId,batch.LStat,
      batch.MD5, batch.DeltaSeq FROM batch JOIN Path ON (batch.Path = Path.Path) JOIN
      Filename ON (batch.Name = Filename.Name): ERR=Deadlock found when trying to get
      lock;

      When running the Bacula 9.0.1 regression script named: three-pool-virtual-test
      This does not occur on any version of MySQL, nor the Ubuntu version 10.0 of MariaDB. The code has been stable for many years.

      I am running all instances of MariaDB and MySQL out of the box. I have changed no parameters.

      This appears to be a false deadlock detection. Note, it is 100% reproducible.

      Attachments

        1. mariadb-bug
          1 kB
        2. mdev13333.test
          2 kB
        3. output_b
          6.44 MB

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              kern Kern Sibbald
              Votes:
              1 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d
                  2d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.